--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -716,6 +716,7 @@
     <string name="rate_us_prompt">Witaj,\n\nwygląda na to, że używasz tej aplikacji już od dłuższego czasu i naprawdę to doceniamy.\n\nJeśli możemy prosić Cię o przysługę, proszę oceń nas w Google Play. To by nam naprawdę bardzo pomogło.\n\nNiezależnie od tego, co zdecydujesz, nie zobaczysz tej wiadomości ponownie.\n\nThanks!</string>
     <string name="rate_our_app">Oceń naszą aplikację :)</string>
     <string name="thank_you">Dziękujemy</string>
+    <string name="widget_locked_pro">The widget is locked.\nPlease upgrade to the Pro version to unlock it.</string>
     <string name="widget_locked">
         <![CDATA[
             The widget is locked.<br>Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock it.
